fixed windows height on small screens, fixed the offsetX and offsetY, in window instances, added default open windows, disable some pointer events of browser.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -131,3 +131,7 @@
     );
   }
 }
+
+html, body {
+  overscroll-behavior: none;
+}
